mongo-express/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  # namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: mongo-express-service
              port:
                number: 8081
          
          
          # - path: /analytics
          #   backend:
          #     servicename: analyticsservicesname
          #     servicePort: 800
          # - path: /shopig
          #   backend:
          #     servicename: shopigservicesname
          #     servicePort: 810

        #  - host: dashboard.com
        #   http:
        #     paths:
        #       - path: /analytics
        #         backend:
        #           servicename: analyticsservicesname
        #           servicePort: 800
        #       - path: /shopig
        #         backend:
        #           servicename: shopigservicesname
        #           servicePort: 810
                  
        # - host: another.com
        #   http:
        #     paths:
        #       - path: /analytics
        #         backend:
        #           servicename: analyticsservicesname
        #           servicePort: 800
        #       - path: /shopig
        #         backend:
        #           servicename: shopigservicesname
        #           servicePort: 810
